# Corner-Refinement

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md
include/: computeedge.h  computeedge.h~  detectharriscorners.h  detectharriscorners.h~  refinecorners.h  refinecorners.h~
matlab test/: returnCorners.m  testCases.m
src/: CMakeLists.txt~  computeEdge.cpp  computeEdge.cpp~  detectHarrisCorners.cpp  detectHarrisCorners.cpp~  main.cpp  main.cpp~  refineCorners.cpp  refineCorners.cpp~
